--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -50,3 +50,9 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
+
+{% block copyright %}
+
+Copyright 2023 Ryan Murray
+
+{% endblock copyright %}
